# Full_Stack_TodoApp

frontend_todo/: .gitignore  package.json  pnpm-lock.yaml
frontend_todo/src/app/: globals.css
frontend_todo/src/component/: AddTodoModel.tsx  DeletableChip.tsx  Footer.tsx  Header.tsx  MainPage.tsx  Search.tsx  TodoCard.tsx  TodoMenu.tsx  myloading.tsx  threebutton.tsx
frontend_todo/src/data/: RestApis.ts  datatypes.ts
frontend_todo/src/utils/: DateUtils.ts  url.ts
todoapi/: .gitignore  Dockerfile  Dockerfile.dev  README.md  pyproject.toml
todoapi/tests/: test_main.py
todoapi/todoapi/: main.py  setting.py  todomodel.py
